--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,35 +2,43 @@
 
 /* Estilos reseteados */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     font: inherit;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-button, input, textarea{
+button,
+input,
+textarea {
     background: none;
     outline: none;
     border: none;
 }
 
-html{
+html {
     color-scheme: dark;
 }
 
-*, html {
+*,
+html {
     scroll-behavior: smooth !important;
 }
 
-img, picture, svg, video{
+img,
+picture,
+svg,
+video {
     max-height: 100%;
 }
 
@@ -40,7 +48,11 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
-h1, h2, h2, h3, h4 {
+h1,
+h2,
+h2,
+h3,
+h4 {
     text-wrap: balance;
 }
 
@@ -67,8 +79,8 @@ header {
     display: flex;
     justify-content: space-between;
     box-shadow: 0 8px 32px 0 rgba(55, 135, 31, 0.37);
-    backdrop-filter: blur( 8px );
-    -webkit-backdrop-filter: blur( 8px );
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
     align-items: center;
     border-bottom: 2px solid #fefefe;
     position: fixed;
@@ -230,28 +242,27 @@ header {
     filter: invert(100%);
 }
 
-@media screen and (width <= 720px) {
-    
+@media screen and (width <=720px) {
+
     .header_icon {
         height: 50px;
     }
-    
+
     .contacto_container {
         font-size: 8px;
     }
-    
+
     .checkbtn {
         display: block;
     }
-    
+
     .nav {
         position: fixed;
         width: 100%;
         height: 100dvh;
-        background-color: rgba(44, 62, 80, 0.9);
-        box-shadow: 0 8px 32px 0 rgba(55, 135, 31, 0.4);
-        backdrop-filter: blur( 8px );
-        -webkit-backdrop-filter: blur( 8px );
+        background-color: rgba(55, 135, 31, 0.4);
+        backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
         top: 82px;
         left: -100%;
         text-align: center;
@@ -259,50 +270,48 @@ header {
         justify-content: center;
         transition: all .5s;
     }
-    
-    #check:checked ~ .nav {
+
+    #check:checked~.nav {
         left: 0;
     }
-    
+
     #trabajos {
         padding-left: 8em;
     }
-    
+
     .contact_RPG_logo {
         margin: 0 auto;
     }
-    
-    .portfolioItem img{
+
+    .portfolioItem img {
         width: 200px;
     }
-    
+
     .inicio_texto h1 {
         font-size: large;
     }
-    
+
     #acerca h1 {
         font-size: large;
     }
-    
+
     #trabajos h1 {
         font-size: large;
     }
-    
+
     #mision_vision h1 {
         font-size: large;
     }
-    
+
     #contacto h1 {
         font-size: large;
     }
 }
 
 .portfolio {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
 }
 
 .portfolioItem {
@@ -395,19 +404,19 @@ header {
     background: #37871f;
 }
 
-#radio1:checked ~ .first {
+#radio1:checked~.first {
     margin-left: 0;
 }
 
-#radio2:checked ~ .first {
+#radio2:checked~.first {
     margin-left: -20%;
 }
 
-#radio3:checked ~ .first {
+#radio3:checked~.first {
     margin-left: -40%;
 }
 
-#radio4:checked ~ .first {
+#radio4:checked~.first {
     margin-left: -60%;
 }
 
@@ -432,18 +441,18 @@ header {
     margin-right: 40px;
 }
 
-#radio1:checked ~ .navigation-auto .auto-btn1 {
+#radio1:checked~.navigation-auto .auto-btn1 {
     background: #37871f;
 }
 
-#radio2:checked ~ .navigation-auto .auto-btn2 {
+#radio2:checked~.navigation-auto .auto-btn2 {
     background: #37871f;
 }
 
-#radio3:checked ~ .navigation-auto .auto-btn3 {
+#radio3:checked~.navigation-auto .auto-btn3 {
     background: #37871f;
 }
 
-#radio4:checked ~ .navigation-auto .auto-btn4 {
+#radio4:checked~.navigation-auto .auto-btn4 {
     background: #37871f;
 }
